@@ -13,6 +13,7 @@
  * "%m" specifier to get (and display) mipmap information
  * improved the 'align' (TODO)
  * mipmaps (rescaled images) for e.g. faster display of large images (TODO)
+ * image cache will remember alignment within viewport (TODO)
 
                 Version 0.4
 
